--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,9 +1,19 @@
 html,
+.header {
+  padding: 10;
+  margin: 10;
+  height: 100;
+  color: antiquewhite;
+  background-color: darkolivegreen;
+  flex-direction: row;
+}
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: black;
+  background-color: antiquewhite;
 }
 
 a {
