--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 2rem;
+  padding: 0;
 }
 
 .main {
@@ -10,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: url(/frontend/public/top_image.jpeg);
 }
 
 .footer {
@@ -44,6 +45,10 @@
   line-height: 1.15;
   font-size: 4rem;
 }
+.subtitle {
+  margin: 0;
+  line-height: 1.15;
+}
 
 .title,
 .description {
@@ -54,6 +59,11 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
+}
+
+.item {
+  display: flex;
+  flex-direction: row;
 }
 
 .code {
