--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -7,6 +7,24 @@ html,
   background-color: darkolivegreen;
   flex-direction: row;
 }
+.top {
+  height: 500;
+  width: max-content;
+  background-image: url(/frontend/public/top_image.jpeg);
+}
+.button {
+  background-color: #4CAF50;
+  border-radius: 12px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -15,6 +33,8 @@ body {
   color: black;
   background-color: antiquewhite;
 }
+
+
 
 a {
   color: inherit;
