--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,16 +1,18 @@
 .container {
   padding: 0;
+  height: max-content;
+  width: 100%;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  height: max-content;
+  padding: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(/frontend/public/top_image.jpeg);
+  background-color: antiquewhite;
 }
 
 .footer {
@@ -42,7 +44,6 @@
 
 .title {
   margin: 0;
-  line-height: 1.15;
   font-size: 4rem;
 }
 .subtitle {
@@ -59,6 +60,10 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
+}
+
+.condition {
+  margin-right: 100px;
 }
 
 .item {
