--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -3,6 +3,7 @@ html,
   padding: 10;
   margin: 10;
   height: 40px;
+  width: 100%;
   color: antiquewhite;
   background-color: darkolivegreen;
   flex-direction: row;
@@ -14,13 +15,16 @@ html,
 }
 
 .button {
-  background-color: #4CAF50;
+  background-color: darkolivegreen;
   border-radius: 12px;
   color: white;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
+  font: bold;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* text-decoration: none;
+  display: inline-block; */
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
@@ -35,8 +39,11 @@ html,
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 55px;
+  color: #3f312b;
+  font-size: 50px;
   font-weight: bold;
+  background-color: rgba(255,255,255,0.9);
+  padding-left: 15px;
 }
 
 label {
@@ -48,7 +55,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  color: black;
+  color: #3f312b;
   background-color: antiquewhite;
 }
 
@@ -70,6 +77,6 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background: #3f312b;
   }
 }
