--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -8,6 +8,17 @@ html,
   background-color: darkolivegreen;
   flex-direction: row;
 }
+.home-link {
+  margin-right: 1100px;
+}
+.register-link {
+  background-color: antiquewhite;
+  border-radius: 8px;
+  padding: 8px 16px;
+  color: #3f312b;
+  font-weight: bolder;
+  margin: 20px;
+}
 .top {
   position: relative;
   text-align: center;
@@ -18,7 +29,7 @@ html,
   background-color: darkolivegreen;
   border-radius: 12px;
   color: white;
-  padding: 15px 32px;
+  padding: 5px 18px;
   text-align: center;
   font: bold;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -26,7 +37,7 @@ html,
   /* text-decoration: none;
   display: inline-block; */
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 10px 10px;
   cursor: pointer;
 }
 
@@ -44,6 +55,13 @@ html,
   font-weight: bold;
   background-color: rgba(255,255,255,0.9);
   padding-left: 15px;
+}
+.mypage-content {
+  display: flex;
+  flex-direction: row;
+}
+.plan {
+  margin-right: 100px;
 }
 
 label {
