--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -6,6 +6,7 @@
 
 .main {
   height: max-content;
+  min-height: 600px;
   padding: 0;
   flex: 1;
   display: flex;
@@ -47,7 +48,7 @@
   font-size: 4rem;
 }
 .subtitle {
-  margin: 0;
+  margin: 10px;
   line-height: 1.15;
 }
 
