--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -9,7 +9,10 @@ html,
   flex-direction: row;
 }
 .home-link {
-  margin-right: 1100px;
+  margin-right: 75%;
+  margin-left: 0%;
+  padding-left: 0%;
+  
 }
 .register-link {
   background-color: antiquewhite;
@@ -17,7 +20,7 @@ html,
   padding: 8px 16px;
   color: #3f312b;
   font-weight: bolder;
-  margin: 20px;
+  margin: 1%;
 }
 .top {
   position: relative;
@@ -28,8 +31,9 @@ html,
 .button {
   background-color: darkolivegreen;
   border-radius: 12px;
+  border: none;
   color: white;
-  padding: 5px 18px;
+  padding: 8px 18px;
   text-align: center;
   font: bold;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -39,11 +43,17 @@ html,
   font-size: 16px;
   margin: 10px 10px;
   cursor: pointer;
+  justify-content: space-between;
 }
 
+.link {
+  text-decoration: underline;
+}
 
 .register {
   text-align: center;
+  display: flex;
+  margin: 10px;
 }
 
 .centered {
@@ -61,8 +71,29 @@ html,
   display: flex;
   flex-direction: row;
 }
-.plan {
-  margin-right: 100px;
+.box {
+  margin: 50px;
+  width: max-content;
+  padding: 30px;
+  border: solid medium #3f312b;
+  border-radius: 24px;
+}
+.form{
+  align-items: center;
+  align-content: center;
+  width: max-content;
+  margin: 50px;
+  padding: 100px;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  border: solid#3f312b;
+  border-radius: 50px;
+}
+.center-button {
+  align-items: center;
+  align-content: center;
+  position: absolute;
+  left: 46%;
 }
 
 label {
@@ -94,6 +125,13 @@ a {
   color: inherit;
   text-decoration: none;
   padding: 10px;
+}
+
+li {
+  text-align: left;
+}
+label {
+  width: 200px;
 }
 
 * {
